Actualizando dockerfile para gunicorn

--- a/app/templates/check_in.html
+++ b/app/templates/check_in.html
@@ -48,7 +48,7 @@ function initMap() {
                 position: { lat, lng },
                 map: map,
                 label: "T",
-                title: "Tu ubicación actual",
+                title: "Ubicación actual",
                 icon: "https://maps.google.com/mapfiles/ms/icons/blue-dot.png"
             });
 
